# spur

./: Anchor.toml  client.js  package-lock.json  package.json
.netlify/: state.json
app/: craco.config.js  package.json
app/public/: index.html
app/src/: App.less  App.tsx  Home.tsx  idl.json  program.ts  spur.json  xApp.js
app/src/components/: ContGrantDetails.tsx  Contributor.tsx  GrantCreate.tsx  GrantDetails.tsx  Home.tsx  Treasury.tsx
app/src/context/: EndpointContext.tsx
app/src/hooks/: psyProgram.ts  spurClient.ts  spurProgram.ts
app/src/lib/: client.ts  program.ts  psy.ts  spur.json  util.ts
app/src/util/: text.ts  time.ts
programs/spur/: Cargo.toml
programs/spur/src/: account.rs  context.rs  lib.rs
tests/: spur.ts
