[package]
name = "spur"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spur"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
anchor-spl = "0.16.0"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
